fixed account  label not showing up on desktops

--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -87,15 +87,14 @@ header {
     background-color: transparent;
     border: 0;
     color: #333;
-    font-size: 1.1em;
+    font-size: 1.2em;
     font-weight: 200;
     width: 100%;
     height: $navHeight;
-    transition: background-color 0.2s ease, font-size 0.2s ease;
+    transition: background-color 0.2s ease;
 
     &:focus {
       outline: none;
-      font-size: 1.2em;
       background-color: #fcfcfc;
     }
   }
